--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     .comp-container {
         position: relative;
         width: 100%;
-        max-width: 800px;
+        max-width: 1000px; /* INCREASED SIZE */
         margin: 0 auto;
         border-radius: 12px;
         overflow: hidden;
@@ -726,8 +726,7 @@
   </section>
 
   <section class="py-20 border-t border-white/5 bg-black/40">
-      <div class="max-w-4xl mx-auto px-6 text-center">
-          <div class="inline-block p-1 rounded-full border border-accent/30 bg-accent/5 px-4 mb-6">
+      <div class="max-w-6xl mx-auto px-6 text-center"> <div class="inline-block p-1 rounded-full border border-accent/30 bg-accent/5 px-4 mb-6">
               <span class="text-xs font-bold text-accent">🛡️ 100% Undetectable</span>
           </div>
           <h2 class="text-3xl font-medium text-white mb-8">Invisible to Zoom, Teams & Meets.</h2>
@@ -757,40 +756,6 @@
           </div>
           
           <p class="text-xs text-slate-500 mt-6 tracking-wide uppercase">Drag slider to reveal undetectable mode</p>
-      </div>
-  </section>
-
-  <section class="py-12 border-t border-white/5 bg-black border-b border-white/5">
-      <div class="max-w-7xl mx-auto px-6 text-center">
-          <p class="text-[10px] font-mono text-slate-500 uppercase tracking-[0.3em] mb-8">Works Seamlessly With</p>
-          <div class="flex flex-wrap justify-center gap-8 md:gap-16 items-center opacity-60 hover:opacity-100 transition duration-500 grayscale hover:grayscale-0">
-               
-             <div class="flex items-center gap-2 group">
-                 <i class="fa-solid fa-video text-2xl text-blue-400 group-hover:scale-110 transition"></i>
-                 <span class="text-sm font-bold text-slate-300 group-hover:text-white">Zoom</span>
-             </div>
-
-             <div class="flex items-center gap-2 group">
-                 <i class="fa-brands fa-google text-2xl text-green-400 group-hover:scale-110 transition"></i>
-                 <span class="text-sm font-bold text-slate-300 group-hover:text-white">Meet</span>
-             </div>
-
-             <div class="flex items-center gap-2 group">
-                 <i class="fa-brands fa-microsoft text-2xl text-purple-400 group-hover:scale-110 transition"></i>
-                 <span class="text-sm font-bold text-slate-300 group-hover:text-white">Teams</span>
-             </div>
-
-             <div class="flex items-center gap-2 group">
-                 <i class="fa-solid fa-globe text-2xl text-cyan-400 group-hover:scale-110 transition"></i>
-                 <span class="text-sm font-bold text-slate-300 group-hover:text-white">Webex</span>
-             </div>
-
-             <div class="flex items-center gap-2 group">
-                 <i class="fa-brands fa-skype text-2xl text-blue-500 group-hover:scale-110 transition"></i>
-                 <span class="text-sm font-bold text-slate-300 group-hover:text-white">Skype</span>
-             </div>
-
-          </div>
       </div>
   </section>
 
