--- a/index.html
+++ b/index.html
@@ -373,9 +373,11 @@
       </a>
        
       <div class="hidden md:flex items-center gap-1 bg-white/5 p-1 rounded-full border border-white/5">
-        <a href="#features" class="px-6 py-2 text-xs font-semibold text-slate-400 hover:text-white rounded-full transition">Features</a>
-        <a href="#demo" class="px-6 py-2 text-xs font-semibold text-slate-400 hover:text-white rounded-full transition">Demo</a>
-        <a href="#pricing" class="px-6 py-2 text-xs font-semibold text-slate-400 hover:text-white rounded-full transition">Pricing</a>
+        <a href="#features" class="px-4 py-2 text-xs font-semibold text-slate-400 hover:text-white rounded-full transition">Features</a>
+        <a href="#demo" class="px-4 py-2 text-xs font-semibold text-slate-400 hover:text-white rounded-full transition">Demo</a>
+        <a href="#testimonials" class="px-4 py-2 text-xs font-semibold text-slate-400 hover:text-white rounded-full transition">Reviews</a>
+        <a href="#pricing" class="px-4 py-2 text-xs font-semibold text-slate-400 hover:text-white rounded-full transition">Pricing</a>
+        <a href="#faq" class="px-4 py-2 text-xs font-semibold text-slate-400 hover:text-white rounded-full transition">FAQ</a>
       </div>
 
       <div class="flex items-center gap-5">
@@ -817,9 +819,92 @@
     </div>
   </section>
 
+  <section class="py-24 border-t border-white/5 bg-[#050505]">
+      <div class="max-w-7xl mx-auto px-6">
+          <div class="flex justify-between items-end mb-12">
+              <h2 id="testimonials" class="text-3xl font-medium text-white">Engineers love Whis.</h2>
+              <div class="text-right">
+                  <div class="flex gap-1 text-accent text-sm mb-1">
+                      <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                  </div>
+                  <p class="text-[10px] text-slate-500">Rated 4.9/5 by 2,000+ users</p>
+              </div>
+          </div>
+           
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+              <div class="physics-card p-8 flex flex-col justify-between">
+                  <div>
+                      <i class="fa-solid fa-quote-left text-white/10 text-4xl mb-4"></i>
+                      <p class="text-slate-300 text-sm leading-relaxed mb-6">"I was skeptical about the 'undetectable' claim, but it really works. The context feature is a lifesaver for behavioral rounds. Landed an L5 offer at Google."</p>
+                  </div>
+                  <div class="flex items-center gap-3 border-t border-white/5 pt-4">
+                      <div class="w-8 h-8 rounded-full bg-gradient-to-tr from-blue-500 to-purple-500 flex items-center justify-center text-xs font-bold">JK</div>
+                      <div>
+                          <p class="text-xs font-bold text-white">James K.</p>
+                          <p class="text-[10px] text-slate-500">Google, Senior SDE</p>
+                      </div>
+                  </div>
+              </div>
+
+              <div class="physics-card p-8 flex flex-col justify-between border-accent/20">
+                  <div>
+                      <i class="fa-solid fa-quote-left text-accent/20 text-4xl mb-4"></i>
+                      <p class="text-slate-300 text-sm leading-relaxed mb-6">"The HLD visual analysis is insane. It read my interviewer's diagram and suggested sharding strategies instantly. Best investment I've made."</p>
+                  </div>
+                  <div class="flex items-center gap-3 border-t border-white/5 pt-4">
+                      <div class="w-8 h-8 rounded-full bg-gradient-to-tr from-green-500 to-teal-500 flex items-center justify-center text-xs font-bold">SM</div>
+                      <div>
+                          <p class="text-xs font-bold text-white">Sarah M.</p>
+                          <p class="text-[10px] text-slate-500">Amazon, SDE II</p>
+                      </div>
+                  </div>
+              </div>
+
+              <div class="physics-card p-8 flex flex-col justify-between">
+                  <div>
+                      <i class="fa-solid fa-quote-left text-white/10 text-4xl mb-4"></i>
+                      <p class="text-slate-300 text-sm leading-relaxed mb-6">"English isn't my first language. Whis translated my complex thoughts into professional answers in real-time. It gave me the confidence I needed."</p>
+                  </div>
+                  <div class="flex items-center gap-3 border-t border-white/5 pt-4">
+                      <div class="w-8 h-8 rounded-full bg-gradient-to-tr from-yellow-500 to-orange-500 flex items-center justify-center text-xs font-bold">AL</div>
+                      <div>
+                          <p class="text-xs font-bold text-white">Arjun L.</p>
+                          <p class="text-[10px] text-slate-500">Microsoft, L61</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <section class="py-24 border-t border-white/5 bg-[#050505]">
+      <div class="max-w-4xl mx-auto px-6 text-center">
+          <h2 class="text-4xl font-medium text-white mb-6">Is Whis-AI Free?</h2>
+          <div class="text-5xl font-bold text-accent mb-6">Yes.</div>
+          <p class="text-slate-300 text-lg leading-relaxed mb-8">
+              We believe in democratizing interview preparation. That's why we offer <strong class="text-white">3 Claim Sessions (Trial)</strong> and <strong class="text-white">10 Free Syntheses Daily</strong> to every user, forever.
+          </p>
+          <div class="grid grid-cols-1 md:grid-cols-3 gap-6 text-left max-w-3xl mx-auto">
+              <div class="p-6 rounded-xl bg-white/5 border border-white/10">
+                  <h3 class="text-white font-bold mb-2">Cost Centric</h3>
+                  <p class="text-xs text-slate-400">The most affordable premium option in the market. Why pay $50+ elsewhere?</p>
+              </div>
+              <div class="p-6 rounded-xl bg-white/5 border border-white/10">
+                  <h3 class="text-white font-bold mb-2">Daily Free Usage</h3>
+                  <p class="text-xs text-slate-400">10 free requests every 24 hours. Perfect for light practice or short rounds.</p>
+              </div>
+              <div class="p-6 rounded-xl bg-white/5 border border-white/10">
+                  <h3 class="text-white font-bold mb-2">Full Features</h3>
+                  <p class="text-xs text-slate-400">Trial sessions include Audio, Visual, and Context features unlocked.</p>
+              </div>
+          </div>
+          <button onclick="openDownloadModal()" class="mt-12 px-8 py-3 rounded-full bg-white text-black font-bold hover:bg-slate-200 transition">Start For Free</button>
+      </div>
+  </section>
+
   <section class="py-24 border-t border-white/5 bg-black">
       <div class="max-w-3xl mx-auto px-6">
-          <h2 class="text-3xl font-medium text-white mb-12 text-center">Common Questions.</h2>
+          <h2 id="faq" class="text-3xl font-medium text-white mb-12 text-center">Common Questions.</h2>
           <div class="space-y-4">
               <div class="group border border-white/10 rounded-xl overflow-hidden bg-white/5 hover:border-white/20 transition cursor-pointer" onclick="this.classList.toggle('active')">
                   <div class="p-4 md:p-6 flex justify-between items-center">
