--- a/index.html
+++ b/index.html
@@ -552,34 +552,57 @@
     </div>
   </section>
 
-  <section class="py-20 border-t border-white/5 bg-[#0a0a0a]">
+  <section id="features" class="py-20 border-t border-white/5 bg-[#0a0a0a]">
       <div class="max-w-7xl mx-auto px-6">
-          <h2 class="text-3xl font-medium text-white mb-4 text-center">Master Every Round.</h2>
-          <p class="text-slate-400 text-center mb-16 max-w-2xl mx-auto">From LeetCode Hards to complex Distributed Systems. Whis-AI covers every aspect of the modern technical interview.</p>
+          <h2 class="text-3xl font-medium text-white mb-16 text-center">The Core Stack.</h2>
            
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
               <div class="physics-card p-6 hover:bg-white/5 transition group">
-                  <div class="w-10 h-10 rounded-full bg-blue-500/10 flex items-center justify-center mb-4 text-blue-400 group-hover:scale-110 transition"><i class="fa-solid fa-code"></i></div>
-                  <h3 class="text-white font-bold mb-2">DSA & Coding</h3>
-                  <p class="text-sm text-slate-400">Instantly solves LeetCode/HackerRank problems. Provides optimized code (Time/Space Complexity included) in Python, Java, C++, and JS.</p>
+                  <div class="w-12 h-12 rounded-xl bg-red-500/10 flex items-center justify-center mb-4 text-red-400 group-hover:scale-110 transition"><i class="fa-solid fa-microphone-lines text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">Voice Capture</h3>
+                  <p class="text-sm text-slate-400">Captures voice and gives output based on it.</p>
               </div>
 
               <div class="physics-card p-6 hover:bg-white/5 transition group">
-                  <div class="w-10 h-10 rounded-full bg-purple-500/10 flex items-center justify-center mb-4 text-purple-400 group-hover:scale-110 transition"><i class="fa-solid fa-sitemap"></i></div>
-                  <h3 class="text-white font-bold mb-2">System Design (HLD)</h3>
-                  <p class="text-sm text-slate-400">Visual context analyzes whiteboard diagrams. Get instant suggestions on Scalability, Load Balancing, and Database Sharding.</p>
+                  <div class="w-12 h-12 rounded-xl bg-blue-500/10 flex items-center justify-center mb-4 text-blue-400 group-hover:scale-110 transition"><i class="fa-solid fa-desktop text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">Screen Vision</h3>
+                  <p class="text-sm text-slate-400">Captures screen and gets output based on it.</p>
               </div>
 
               <div class="physics-card p-6 hover:bg-white/5 transition group">
-                  <div class="w-10 h-10 rounded-full bg-green-500/10 flex items-center justify-center mb-4 text-green-400 group-hover:scale-110 transition"><i class="fa-solid fa-cubes"></i></div>
-                  <h3 class="text-white font-bold mb-2">Object Modeling (LLD)</h3>
-                  <p class="text-sm text-slate-400">Perfect for Machine Coding rounds. Generates class diagrams, design patterns (Singleton, Factory), and clean, modular code.</p>
+                  <div class="w-12 h-12 rounded-xl bg-green-500/10 flex items-center justify-center mb-4 text-green-400 group-hover:scale-110 transition"><i class="fa-solid fa-keyboard text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">Direct Input</h3>
+                  <p class="text-sm text-slate-400">Input text directly and get output.</p>
               </div>
 
               <div class="physics-card p-6 hover:bg-white/5 transition group">
-                  <div class="w-10 h-10 rounded-full bg-yellow-500/10 flex items-center justify-center mb-4 text-yellow-400 group-hover:scale-110 transition"><i class="fa-solid fa-comments"></i></div>
-                  <h3 class="text-white font-bold mb-2">Behavioral & Lead</h3>
-                  <p class="text-sm text-slate-400">Crafts perfect STAR-format answers aligned with Leadership Principles (Amazon, Google) based on your resume context.</p>
+                  <div class="w-12 h-12 rounded-xl bg-purple-500/10 flex items-center justify-center mb-4 text-purple-400 group-hover:scale-110 transition"><i class="fa-solid fa-eye-slash text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">100% Invisible</h3>
+                  <p class="text-sm text-slate-400">Completely invisible to screenshare.</p>
+              </div>
+
+              <div class="physics-card p-6 hover:bg-white/5 transition group">
+                  <div class="w-12 h-12 rounded-xl bg-slate-500/10 flex items-center justify-center mb-4 text-slate-400 group-hover:scale-110 transition"><i class="fa-solid fa-ghost text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">Ghost Mode</h3>
+                  <p class="text-sm text-slate-400">No dock or icon for the app.</p>
+              </div>
+
+              <div class="physics-card p-6 hover:bg-white/5 transition group">
+                  <div class="w-12 h-12 rounded-xl bg-yellow-500/10 flex items-center justify-center mb-4 text-yellow-400 group-hover:scale-110 transition"><i class="fa-solid fa-language text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">Universal Translator</h3>
+                  <p class="text-sm text-slate-400">Any language you or interviewer talk, app will understand and gives answers in english.</p>
+              </div>
+
+              <div class="physics-card p-6 hover:bg-white/5 transition group">
+                  <div class="w-12 h-12 rounded-xl bg-pink-500/10 flex items-center justify-center mb-4 text-pink-400 group-hover:scale-110 transition"><i class="fa-solid fa-brain text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">Smart Context</h3>
+                  <p class="text-sm text-slate-400">Any one can put context (what meeting or interview) answers will be based on that.</p>
+              </div>
+
+              <div class="physics-card p-6 hover:bg-white/5 transition group border border-accent/20 bg-accent/5">
+                  <div class="w-12 h-12 rounded-xl bg-accent/20 flex items-center justify-center mb-4 text-accent group-hover:scale-110 transition"><i class="fa-solid fa-gift text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">Free Trial</h3>
+                  <p class="text-sm text-slate-300">Every new user gets 3 free trial sessions which they can use and test all the complete paid features.</p>
               </div>
           </div>
       </div>
