--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta charset="UTF-8" />
   <title>Whis-AI – The Invisible Interview Copilot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-   
+  <script defer src="https://shown.io/metrics/lv3RWlmb8J" type="text/javascript"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
