--- a/support.html
+++ b/support.html
@@ -1,36 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Support – Whis</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>tailwind.config={theme:{extend:{fontFamily:{sans:['Inter','sans-serif']},colors:{page:'#050505',card:'#0A0A0A'}}}}; </script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <style>body{background-color:#050505;color:white;font-family:'Inter',sans-serif;}</style>
+    <meta charset="UTF-8" />
+    <title>Support – Whis-AI</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <style>
+        :root {
+            --bg-dark: #05091c;
+            --glass-bg: rgba(5, 9, 28, 0.75);
+            --glass-border: rgba(255, 255, 255, 0.15);
+            --accent-gradient: linear-gradient(135deg, #3da8ff, #4df4b1);
+            --text-main: #e9ecf5;
+            --text-sub: #8b93a8;
+            --font-main: "SF Pro Text", "Segoe UI", system-ui, sans-serif;
+        }
+
+        * { box-sizing: border-box; }
+
+        body {
+            background-color: var(--bg-dark);
+            background-image: radial-gradient(circle at 50% 0%, rgba(61, 168, 255, 0.12) 0%, transparent 50%),
+                              linear-gradient(160deg, rgba(20, 30, 60, 0.4) 0%, rgba(5, 8, 20, 0.85) 100%);
+            color: var(--text-main);
+            font-family: var(--font-main);
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            -webkit-font-smoothing: antialiased;
+        }
+
+        /* --- Global Header (Consistent with index.html) --- */
+        .whis-global-header {
+            height: 70px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 30px;
+            background: rgba(5, 5, 5, 0.4);
+            backdrop-filter: blur(20px);
+            border-bottom: 1px solid var(--glass-border);
+            position: fixed;
+            top: 0;
+            z-index: 10000;
+        }
+
+        .whis-logo-container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .whis-logo-svg {
+            width: 24px;
+            height: 24px;
+            filter: drop-shadow(0 0 5px rgba(77, 244, 177, 0.6));
+        }
+
+        .whis-logo-text {
+            font-size: 18px;
+            font-weight: 700;
+            background: var(--accent-gradient);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            letter-spacing: -0.5px;
+        }
+
+        .back-link {
+            text-decoration: none;
+            color: var(--text-sub);
+            font-size: 13px;
+            font-weight: 500;
+            transition: color 0.2s;
+        }
+
+        .back-link:hover { color: #fff; }
+
+        /* --- Support Content Area --- */
+        main {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 100px 20px 60px;
+        }
+
+        .support-card {
+            max-width: 480px;
+            width: 100%;
+            background: var(--glass-bg);
+            border: 1px solid var(--glass-border);
+            border-radius: 28px;
+            padding: 50px 40px;
+            text-align: center;
+            backdrop-filter: blur(40px) saturate(180%);
+            box-shadow: 0 25px 80px rgba(0, 0, 0, 0.8);
+        }
+
+        .icon-box {
+            width: 64px;
+            height: 64px;
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid var(--glass-border);
+            border-radius: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto 30px;
+            font-size: 24px;
+            color: var(--accent-blue);
+        }
+
+        h1 {
+            font-size: 28px;
+            font-weight: 700;
+            margin: 0 0 10px;
+            background: var(--accent-gradient);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .support-subtitle {
+            color: var(--text-sub);
+            font-size: 14px;
+            font-weight: 300;
+            margin-bottom: 40px;
+        }
+
+        .email-box {
+            background: rgba(0, 0, 0, 0.3);
+            border: 1px solid var(--glass-border);
+            border-radius: 16px;
+            padding: 30px;
+            margin-bottom: 40px;
+            transition: all 0.3s;
+        }
+
+        .email-box:hover {
+            border-color: var(--accent-blue);
+            transform: translateY(-2px);
+            background: rgba(61, 168, 255, 0.05);
+        }
+
+        .email-label {
+            display: block;
+            font-size: 10px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            color: var(--accent-green);
+            font-weight: 700;
+            margin-bottom: 8px;
+        }
+
+        .email-link {
+            text-decoration: none;
+            color: #fff;
+            font-size: 20px;
+            font-weight: 600;
+            transition: color 0.2s;
+        }
+
+        .email-link:hover {
+            color: var(--accent-blue);
+        }
+
+        .merchant-info {
+            border-top: 1px solid rgba(255, 255, 255, 0.08);
+            padding-top: 30px;
+            text-align: left;
+        }
+
+        .info-header {
+            text-align: center;
+            font-size: 11px;
+            color: var(--text-sub);
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .info-row {
+            display: flex;
+            justify-content: space-between;
+            font-size: 12px;
+            margin-bottom: 10px;
+        }
+
+        .info-label { color: var(--text-sub); }
+        .info-value { color: var(--text-main); font-weight: 500; }
+
+        footer {
+            text-align: center;
+            padding: 30px 0;
+            font-size: 10px;
+            color: var(--text-sub);
+            border-top: 1px solid rgba(255, 255, 255, 0.05);
+        }
+    </style>
 </head>
-<body class="antialiased min-h-screen flex flex-col">
-  <nav class="w-full h-[70px] flex items-center justify-between px-6 border-b border-white/5 bg-page/80 backdrop-blur-md sticky top-0">
-     <a href="/" class="flex items-center gap-2"><div class="w-8 h-8 rounded-lg bg-white/10 flex items-center justify-center border border-white/5"><span class="text-xs font-bold">WH</span></div><span class="text-sm font-semibold text-slate-300">whis.ai</span></a>
-     <a href="/" class="text-xs text-slate-500 hover:text-white transition">Back to Home</a>
-  </nav>
-  <main class="flex-grow flex items-center justify-center p-6">
-      <div class="max-w-md w-full text-center">
-          <div class="w-16 h-16 bg-gradient-to-br from-blue-500/10 to-purple-500/10 rounded-2xl flex items-center justify-center mx-auto mb-8 text-blue-400 text-2xl border border-white/5"><i class="fa-solid fa-life-ring"></i></div>
-          <h1 class="text-3xl font-medium mb-3 text-white">Priority Support</h1>
-          <p class="text-slate-400 mb-10 text-sm font-light">We respond to all technical queries within 24 hours.</p>
-          <div class="bg-card border border-white/10 rounded-xl p-8 mb-8 hover:border-blue-500/30 transition duration-300">
-              <p class="text-[10px] text-slate-500 mb-2 uppercase tracking-widest font-bold">Email Us</p>
-              <a href="mailto:support@whis-ai.com" class="text-xl font-medium text-white hover:text-blue-400 transition">support@whis-ai.com</a>
-          </div>
-          <div class="text-xs text-slate-600 border-t border-white/5 pt-8 text-left">
-              <p class="mb-4 text-center text-slate-500">Merchant Information</p>
-              <div class="flex justify-between mb-2"><span>Legal Name</span><span class="text-slate-400">WASEEM FAHAD SYED</span></div>
-              <div class="flex justify-between"><span>Location</span><span class="text-slate-400">Hyderabad, India</span></div>
-          </div>
-      </div>
-  </main>
-  <footer class="py-8 text-center text-[10px] text-slate-700 border-t border-white/5">&copy; 2025 Whis AI Inc. All rights reserved.</footer>
+<body>
+
+    <nav class="whis-global-header">
+       <div class="whis-logo-container">
+            <svg class="whis-logo-svg" viewBox="0 0 24 24" fill="none" stroke="url(#logoGradient)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                <defs>
+                    <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="0%">
+                        <stop offset="0%" style="stop-color:#3da8ff;stop-opacity:1" />
+                        <stop offset="100%" style="stop-color:#4df4b1;stop-opacity:1" />
+                    </linearGradient>
+                </defs>
+                <path d="M13 2 L3 14 h9 l-1 8 10 -12 h-9 l1 -8 z"></path>
+            </svg>
+            <span class="whis-logo-text">Whis-AI</span>
+       </div>
+       <a href="index.html" class="back-link">Back to Home</a>
+    </nav>
+
+    <main>
+        <div class="support-card">
+            <div class="icon-box">
+                <i class="fa-solid fa-life-ring"></i>
+            </div>
+            <h1>Priority Support</h1>
+            <p class="support-subtitle">Our team typically responds to all technical and billing queries within 24 hours.</p>
+            
+            <div class="email-box">
+                <span class="email-label">Send an Email</span>
+                <a href="mailto:support@whis-ai.com" class="email-link">support@whis-ai.com</a>
+            </div>
+
+            <div class="merchant-info">
+                <div class="info-header">Merchant Information</div>
+                <div class="info-row">
+                    <span class="info-label">Legal Name</span>
+                    <span class="info-value">WASEEM FAHAD SYED</span>
+                </div>
+                <div class="info-row">
+                    <span class="info-label">Location</span>
+                    <span class="info-value">Hyderabad, India</span>
+                </div>
+            </div>
+        </div>
+    </main>
+    
+    <footer>&copy; 2025 Whis AI Inc. All rights reserved.</footer>
 </body>
 </html>
