--- a/shipping-policy.html
+++ b/shipping-policy.html
@@ -1,68 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Delivery – Whis</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>tailwind.config={theme:{extend:{fontFamily:{sans:['Inter','sans-serif']},colors:{page:'#050505'},backgroundImage:{'grid-pattern':'linear-gradient(to right, #202020 1px, transparent 1px), linear-gradient(to bottom, #202020 1px, transparent 1px)'}}}}</script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-  <style>body{background-color:#050505;color:white;}.glass-nav{background:rgba(5,5,5,0.7);backdrop-filter:blur(20px);border-bottom:1px solid rgba(255,255,255,0.05);}.bg-grid{background-size:40px 40px;mask-image:radial-gradient(circle at center, black, transparent 80%);opacity:0.1;}</style>
+    <meta charset="UTF-8" />
+    <title>Delivery – Whis-AI</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <style>
+        :root {
+            --bg-dark: #05091c;
+            --glass-bg: rgba(5, 9, 28, 0.75);
+            --glass-border: rgba(255, 255, 255, 0.15);
+            --accent-gradient: linear-gradient(135deg, #3da8ff, #4df4b1);
+            --text-main: #e9ecf5;
+            --text-sub: #8b93a8;
+            --font-main: "SF Pro Text", "Segoe UI", system-ui, sans-serif;
+        }
+
+        * { box-sizing: border-box; }
+
+        body {
+            background-color: var(--bg-dark);
+            background-image: radial-gradient(circle at 50% 0%, rgba(61, 168, 255, 0.12) 0%, transparent 50%),
+                              linear-gradient(160deg, rgba(20, 30, 60, 0.4) 0%, rgba(5, 8, 20, 0.85) 100%);
+            color: var(--text-main);
+            font-family: var(--font-main);
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            -webkit-font-smoothing: antialiased;
+        }
+
+        /* --- Global Header (Consistent with index.html) --- */
+        .whis-global-header {
+            height: 70px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 30px;
+            background: rgba(5, 5, 5, 0.4);
+            backdrop-filter: blur(20px);
+            border-bottom: 1px solid var(--glass-border);
+            position: fixed;
+            top: 0;
+            z-index: 10000;
+        }
+
+        .whis-logo-container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .whis-logo-svg {
+            width: 24px;
+            height: 24px;
+            filter: drop-shadow(0 0 5px rgba(77, 244, 177, 0.6));
+        }
+
+        .whis-logo-text {
+            font-size: 18px;
+            font-weight: 700;
+            background: var(--accent-gradient);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            letter-spacing: -0.5px;
+        }
+
+        .back-link {
+            text-decoration: none;
+            color: var(--text-sub);
+            font-size: 13px;
+            font-weight: 500;
+            transition: color 0.2s;
+        }
+
+        .back-link:hover { color: #fff; }
+
+        /* --- Main Content Area --- */
+        main {
+            max-width: 900px;
+            margin: 100px auto 60px;
+            padding: 40px;
+            background: var(--glass-bg);
+            border: 1px solid var(--glass-border);
+            border-radius: 24px;
+            backdrop-filter: blur(40px) saturate(180%);
+            box-shadow: 0 15px 50px rgba(0, 0, 0, 0.7);
+        }
+
+        h1 {
+            font-size: 32px;
+            font-weight: 700;
+            margin: 0 0 10px;
+            background: var(--accent-gradient);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .policy-subtitle {
+            color: var(--text-sub);
+            font-size: 13px;
+            margin-bottom: 40px;
+            border-bottom: 1px solid rgba(255,255,255,0.1);
+            padding-bottom: 20px;
+        }
+
+        section { margin-bottom: 40px; }
+
+        h2 {
+            font-size: 18px;
+            font-weight: 600;
+            color: var(--accent-green);
+            margin-bottom: 15px;
+        }
+
+        p { color: var(--text-main); font-weight: 300; margin: 0 0 15px; }
+
+        /* Timeline Grid */
+        .timeline-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .timeline-card {
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid var(--glass-border);
+            border-radius: 16px;
+            padding: 20px;
+        }
+
+        .timeline-card strong {
+            display: block;
+            color: #fff;
+            font-size: 14px;
+            margin-bottom: 5px;
+        }
+
+        .timeline-card p {
+            font-size: 12px;
+            color: var(--text-sub);
+            margin: 0;
+        }
+
+        ul {
+            list-style: none;
+            padding-left: 0;
+            margin: 15px 0;
+        }
+
+        ul li {
+            position: relative;
+            padding-left: 20px;
+            margin-bottom: 10px;
+            color: var(--text-main);
+            font-weight: 300;
+            font-size: 14px;
+        }
+
+        ul li::before {
+            content: "•";
+            color: var(--accent-blue);
+            font-weight: bold;
+            position: absolute;
+            left: 0;
+        }
+
+        .support-link {
+            color: var(--accent-blue);
+            text-decoration: none;
+            transition: color 0.2s;
+        }
+
+        .support-link:hover {
+            color: var(--accent-green);
+        }
+
+        footer {
+            text-align: center;
+            padding: 40px 0;
+            font-size: 12px;
+            color: var(--text-sub);
+            border-top: 1px solid rgba(255,255,255,0.05);
+        }
+    </style>
 </head>
-<body class="min-h-screen relative selection:bg-blue-500/30">
-  <div class="fixed inset-0 bg-grid bg-grid-pattern pointer-events-none"></div>
-  
-  <nav class="fixed top-0 w-full z-50 glass-nav h-[70px] flex items-center justify-center">
-    <div class="w-full max-w-5xl px-6 flex items-center justify-between">
-      <a href="index.html" class="text-sm font-bold tracking-widest text-white">WHIS.AI</a>
-      <a href="index.html" class="text-xs text-slate-500 hover:text-white transition">Close</a>
-    </div>
-  </nav>
+<body>
 
-  <main class="pt-32 pb-24 px-6 relative z-10">
-    <div class="max-w-3xl mx-auto">
-        <div class="mb-12 border-b border-white/10 pb-8">
-            <h1 class="text-4xl font-medium mb-3 text-white">Shipping & Delivery</h1>
-            <p class="text-slate-500 text-sm">Digital Access Policy.</p>
-        </div>
+    <nav class="whis-global-header">
+       <div class="whis-logo-container">
+            <svg class="whis-logo-svg" viewBox="0 0 24 24" fill="none" stroke="url(#logoGradient)" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                <defs>
+                    <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="0%">
+                        <stop offset="0%" style="stop-color:#3da8ff;stop-opacity:1" />
+                        <stop offset="100%" style="stop-color:#4df4b1;stop-opacity:1" />
+                    </linearGradient>
+                </defs>
+                <path d="M13 2 L3 14 h9 l-1 8 10 -12 h-9 l1 -8 z"></path>
+            </svg>
+            <span class="whis-logo-text">Whis-AI</span>
+       </div>
+       <a href="index.html" class="back-link">Back to Home</a>
+    </nav>
 
-        <div class="space-y-12 text-slate-400 font-light leading-relaxed">
-            <section>
-                <h2 class="text-xl font-medium text-white mb-4">1. Digital Delivery Only</h2>
-                <p>Whis is a Software-as-a-Service (SaaS) product. We do not sell or ship physical goods. All access is delivered electronically via the internet.</p>
-            </section>
+    <main>
+        <header>
+            <h1>Shipping & Delivery</h1>
+            <p class="policy-subtitle">Digital Access Policy</p>
+        </header>
 
-            <section>
-                <h2 class="text-xl font-medium text-white mb-4">2. Activation Timeline</h2>
-                <div class="grid md:grid-cols-2 gap-4">
-                    <div class="bg-white/5 border border-white/5 rounded-xl p-5">
-                        <strong class="text-white block text-sm mb-1">Instant Access</strong>
-                        <p class="text-xs">Typically, your account is upgraded to Pro/Stealth immediately (0-15 mins) after successful payment.</p>
-                    </div>
-                    <div class="bg-white/5 border border-white/5 rounded-xl p-5">
-                        <strong class="text-white block text-sm mb-1">Max Delay</strong>
-                        <p class="text-xs">In rare cases of network or payment verification delays, activation may take up to 24 hours.</p>
-                    </div>
+        <section>
+            <h2>1. Digital Delivery Only</h2>
+            <p>Whis-AI is a Software-as-a-Service (SaaS) product. We do not sell or ship physical goods. All access to our real-time interview tools and AI solutions is delivered electronically via the internet.</p>
+        </section>
+
+        <section>
+            <h2>2. Activation Timeline</h2>
+            <div class="timeline-grid">
+                <div class="timeline-card">
+                    <strong>Instant Access</strong>
+                    <p>Typically, your account is upgraded to Pro or Elite immediately (0-15 mins) after successful payment verification.</p>
                 </div>
-            </section>
+                <div class="timeline-card">
+                    <strong>Maximum Delay</strong>
+                    <p>In rare cases of network or payment verification delays, account activation may take up to 24 hours.</p>
+                </div>
+            </div>
+        </section>
 
-            <section>
-                <h2 class="text-xl font-medium text-white mb-4">3. Confirmation</h2>
-                <p>Upon purchase, you will receive two emails:</p>
-                <ul class="list-disc pl-5 space-y-2 mt-2">
-                    <li>A payment receipt from our payment partner.</li>
-                    <li>An account activation confirmation from Whis.</li>
-                </ul>
-            </section>
+        <section>
+            <h2>3. Confirmation</h2>
+            <p>Upon purchase, you will receive two important communications:</p>
+            <ul>
+                <li>A digital payment receipt from our authorized payment partner.</li>
+                <li>An account activation confirmation email from Whis-AI including instructions on how to access your new features.</li>
+            </ul>
+        </section>
 
-            <section>
-                <h2 class="text-xl font-medium text-white mb-4">4. Support</h2>
-                <p>If you do not receive access within 1 hour of payment, please email <a href="mailto:support@whis-ai.com" class="text-blue-400 hover:text-blue-300">support@whis-ai.com</a>.</p>
-            </section>
-        </div>
-    </div>
-  </main>
-  
-  <footer class="border-t border-white/5 py-12 text-center text-xs text-slate-600 relative z-10">&copy; 2025 Whis AI.</footer>
+        <section>
+            <h2>4. Support</h2>
+            <p>If you do not receive access to your subscription features within 1 hour of a successful payment, please contact our priority support team at <a href="mailto:support@whis-ai.com" class="support-link">support@whis-ai.com</a>.</p>
+        </section>
+    </main>
+    
+    <footer>&copy; 2025 Whis-AI. All rights reserved.</footer>
 </body>
 </html>
