--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
       </div>
   </section>
 
-  <section id="pricing" class="py-32 border-t border-white/5 relative">
+<section id="pricing" class="py-32 border-t border-white/5 relative">
     <div class="max-w-7xl mx-auto px-6 text-center mt-12">
         <h2 class="text-4xl font-medium text-white mb-6">Unbeatable Value.</h2>
         <p class="text-slate-400 mb-12">One offer pays for a lifetime. Cancel anytime.</p>
@@ -606,9 +606,9 @@
         </div>
 
         <div class="flex justify-center mb-12">
-            <div class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-green-900/20 border border-green-500/30">
-                <i class="fa-solid fa-shield-check text-green-400"></i>
-                <span class="text-xs font-bold text-green-400">7-Day Money Back Guarantee</span>
+            <div id="mic-limit-notice" class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-blue-900/20 border border-blue-500/30">
+                <i class="fa-solid fa-microphone-lines text-blue-400"></i>
+                <span class="text-[11px] font-bold text-blue-400 uppercase tracking-tight">Fair Use: 6 Hours Active Mic Access Included Monthly</span>
             </div>
         </div>
 
@@ -630,6 +630,7 @@
                 <div class="text-4xl font-bold text-white mb-6" id="pricePro">...</div>
                 <div class="space-y-4 text-xs text-slate-300 mb-8 flex-grow">
                     <p class="flex gap-3"><i class="fa-solid fa-check text-white"></i> Unlimited Syntheses</p>
+                    <p class="flex gap-3 text-blue-400 font-bold"><i class="fa-solid fa-clock"></i> 6 Hours Mic Access / mo</p>
                     <p class="flex gap-3"><i class="fa-solid fa-check text-white"></i> Visual Context Analysis</p>
                     <p class="flex gap-3"><i class="fa-solid fa-check text-white"></i> Audio Ingestion</p>
                     <p class="flex gap-3 text-red-400"><i class="fa-solid fa-video"></i> Visible on Screenshare</p>
@@ -642,6 +643,7 @@
                 <h3 class="text-xs font-bold text-accent uppercase tracking-widest mb-4">Elite License</h3>
                 <div class="text-4xl font-bold text-white mb-6" id="priceStealth">...</div>
                 <div class="space-y-4 text-xs text-white mb-8 flex-grow">
+                    <p class="flex gap-3 text-accent font-bold"><i class="fa-solid fa-clock"></i> 6 Hours Mic Access / mo</p>
                     <p class="flex gap-3"><i class="fa-solid fa-shield-halved text-accent"></i> 100% Undetectable</p>
                     <p class="flex gap-3"><i class="fa-solid fa-ghost text-accent"></i> Invisible to Screenshare</p>
                     <p class="flex gap-3"><i class="fa-solid fa-keyboard text-accent"></i> Direct Input Mode</p>
@@ -649,6 +651,13 @@
                 </div>
                 <button id="btnElite" disabled onclick="initiatePayment('pro_plus')" class="w-full py-4 rounded-xl bg-accent text-black hover:brightness-110 text-xs font-bold uppercase transition shadow-lg disabled:opacity-50 disabled:cursor-not-allowed">Get Elite</button>
             </div>
+        </div>
+
+        <div class="max-w-2xl mx-auto mt-12 p-4 rounded-xl bg-white/5 border border-white/10">
+            <p class="text-[10px] text-slate-500 font-mono uppercase tracking-widest mb-2">Technical Note: Smart Mic Timer</p>
+            <p class="text-xs text-slate-400 leading-relaxed">
+                The 6-hour limit applies only to <strong>active microphone usage</strong>. The in-app timer only counts down when the Mic is toggled <span class="text-green-400 font-bold">ON</span>. If the Mic is turned off, no time is deducted from your monthly balance.
+            </p>
         </div>
     </div>
   </section>
